# PolePosition

./: .gitmodules  CMakeLists.txt  readme.md
cmake/: Version.cmake
src/pole_position/: Boilerplate.cpp  CMakeLists.txt  SceneParameters.cpp  SceneParameters.hpp  core.hpp  main.cpp
src/pole_position/player/: Player.cpp  Player.hpp
src/pole_position/player_driver/: PlayerDriver.cpp  PlayerDriver.hpp
src/pole_position/scene/: SceneParameters.cpp  SceneParameters.hpp
src/pole_position/third_person_controller/: ThirdPersonController.cpp  ThirdPersonController.hpp
